src/styles/About.module.css
.content {
    justify-content: center;
    align-items: center;
}
h2 {
    margin: 0 12px;
}
.image {
    transform: rotate(6deg);
    z-index: -10;

    padding: 0;
    width: 80%;
    transition: 0.3s ease-in-out;
}
.image img {
    border-radius: 36px;
    aspect-ratio: 1/1;
}
.image::before {
    content: "";
    transform: rotate(-10deg);
    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
    width: 100%;
    aspect-ratio: 1/1;
    position: absolute;
    z-index: -100;
    border-radius: 36px;
    transition: 0.3s ease-in-out;
}
.image:hover {
    transform: rotate(-1deg);
}
.image:hover::before {
    transform: rotate(4deg);
}

.paragraph {
    font-size: 22px;
    display: flex;
    flex-direction: column;
    gap: 24px;
}
.paragraph p {
    line-height: 1.2;
    white-space: break-spaces;
}


@media (min-width: 576px) {

}

@media (min-width: 992px) {

    .image {
        width: 40%;
    }
}

